--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,30 @@ dist/
 build/
 GrammarFlow.egg-info/
 
+samples/hotpotqa/trajs/
+
+*/test.py 
+
+prompt.txt
+*/prompt.txt
+*/main.log
+main.log 
+*/grammar.gnbf
+*/out.txt
+
+*/results/
+*/data/
+*/data_*.json
+*/numbers.json
+data/
+results/
+benchmarker.ipynb
+benchmarks/*/main.log 
+benchmarks/*/results/
+benchmarks/*/data/
+
+*/core.*
+core.*
+
+trajs/
 */trajs/
